--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
         <div class="bluered-card card-section">
 
 <!-- NAVBAR -->
-            <nav id="navbar" class="navbar navbar-expand-lg">
+            <nav id="navbar" class="navbar fixed-top navbar-expand-lg">
                 <a class="navbar-brand" href="#"><img class="logo-white" src="images/logowhite.png" alt="cloud.ca"></a>
-                
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
                         <i class="fas fa-bars"></i>
