--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </span>
                 </button>
                 
-                <div class="collapse navbar-collapse">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Why cloud.ca <span class="sr-only">(current)</span></a>
@@ -80,7 +80,7 @@
                                                 <li><a class="dropdown-item" href="#">Events</a></li>
                                             </ul>
                                     </div>
-                            </div>
+                                </div>
                         </li>
                         <li class="nav-button">
                             <button class="btn btn-outline" type="button">Login | Signup</button>
@@ -93,6 +93,7 @@
             <div class="row">
                 <div class="col-sm-12 card-title">
                     <h3>Canadian Cloud Services</h3>
+                    <hr>
                     <h4>For companies that care where their data lives</h4>
                 </div>
             </div>
