work on mobile-state

--- a/index.html
+++ b/index.html
@@ -97,26 +97,29 @@
                     <h4>For companies that care where their data lives</h4>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4 offset-2 col-sm-8">
+            <div class="row" id="complexclouds">
+                <div class="col-md-5 col-sm-8">
                     <h2>Clouds are complex...</h2>
                 </div>
-                <div class="col-lg-4 col-sm-4 img-triangle">
-                    <img class="img-fluid" src="images/triangle-blue-card.png">
+                <div class="col-lg-4 offset-1 col-sm-4 img-triangle">
+                    <img src="images/triangle-blue-card.png">
                 </div>
             </div>
         </div>
 
 <!-- SECOND CARD -->
         <div class="redorange-card card-section">
-            <div class="row">
-                <div class="col-md-4 offset-2 col-sm-12">
-                    <h2>but they don't have to be</h2> 
+            <div id="title-row-orangecard">
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        <h2>but they don't have to be</h2> 
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-2 offset-7 col-sm-6 offset-6">
-                    <img class="img-fluid" src="images/cube.png">
+                <div class="row ">
+                    <div class="col-md-2 offset-md-7 col-sm-6">
+                        <img class="img-cube-desktop" src="images/cube.png">
+                        <img class="img-cube-mobile" src="images/cube-gradient.png">
+                    </div>
                 </div>
             </div>
             <div class="row text-row-orangecard">
@@ -144,58 +147,60 @@
                     <h4>Technical Brief</h4>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-2 offset-2 col-sm-12"> 
-                    <img class="img-fluid" src="images/elastic-compute.png">
-                    <p>Elastic compute</p>
+            <div class="container tech-brief">
+                <div class="row">
+                    <div class="col-md-2 offset-md-2 col-sm-12"> 
+                        <img src="images/elastic-compute.png">
+                        <p>Elastic compute</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12"> 
+                        <img class="img-fluid" src="images/performant-multi-tenant-storage.png">
+                        <p>Performant multi-tenant storage</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12"> 
+                        <img class="img-fluid" src="images/multi-tiered-networking.png">
+                        <p>Multi-tiered networking</p>
+                    </div>
                 </div>
-                <div class="col-md-2 offset-1 col-sm-12"> 
-                    <img class="img-fluid" src="images/performant-multi-tenant-storage.png">
-                    <p>Performant multi-tenant storage</p>
-                </div>
-                <div class="col-md-2 offset-1 col-sm-12"> 
-                    <img class="img-fluid" src="images/multi-tiered-networking.png">
-                    <p>Multi-tiered networking</p>
+                <div class="row">
+                    <div class="col-md-2 offset-md-2 col-sm-12"> 
+                        <img class="img-fluid" src="images/integrated-devops-tooling.png">
+                        <p>Integrated DevOps Tooling</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12"> 
+                        <img class="img-fluid" src="images/dedicated-infrastructure.png">
+                        <p>Dedicated infrastructure</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12"> 
+                        <img class="img-fluid" src="images/bare-metal-servers.png">
+                        <p>Bare-metal servers</p>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-2 offset-2 col-sm-12"> 
-                    <img class="img-fluid" src="images/integrated-devops-tooling.png">
-                    <p>Integrated DevOps Tooling</p>
-                </div>
-                <div class="col-md-2 offset-1 col-sm-12"> 
-                    <img class="img-fluid" src="images/dedicated-infrastructure.png">
-                    <p>Dedicated infrastructure</p>
-                </div>
-                <div class="col-md-2 offset-1 col-sm-12"> 
-                    <img class="img-fluid" src="images/bare-metal-servers.png">
-                    <p>Bare-metal servers</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 card-title text-row-whitecard">
+            <div class="row text-row-whitecard">
+                <div class="col-md-12 card-title">
                     <h4>Workloads running on cloud.ca</h4>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-2 offset-2 col-sm-12">
+            <div class="row workloads-row">
+                <div class="col-md-2 offset-md-2 col-sm-12">
                     <p>Dev/Test environments</p>
                 </div>
-                <div class="col-md-2 offset-1 col-sm-12">
+                <div class="col-md-2 offset-md-1 col-sm-12">
                     <p>Virtual desktops</p>
                 </div>
-                <div class="col-md-2 offset-1 col-sm-12">
+                <div class="col-md-2 offset-md-1 col-sm-12">
                     <p>Legacy applications</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-2 offset-2 col-sm-12">
+            <div class="row workloads-row">
+                <div class="col-md-2 offset-md-2 col-sm-12">
                     <p>SaaS platforms</p>
                 </div>
-                <div class="col-md-2 offset-1 col-sm-12">
+                <div class="col-md-2 offset-md-1 col-sm-12">
                     <p>Web applications</p>
                 </div>
-                <div class="col-md-2 offset-1 col-sm-12">
+                <div class="col-md-2 offset-md-1 col-sm-12">
                     <p>Infrastructure reseller</p>
                 </div>
             </div>
@@ -204,10 +209,10 @@
 <!-- CALL TO ACTION CARD-->
         <div class="redorange-card call-to-action-card card-section">
             <div class="row">
-                <div class="col-md-2 offset-2 col-sm-12">
+                <div class="col-md-2 offset-md-2 col-sm-12">
                     <a href="#">Learn more</a>
                 </div>
-                <div class="col-md-2 offset-4 col-sm-12">
+                <div class="col-md-2 offset-md-4 col-sm-12">
                     <a href="#">Start trial</a>
                 </div>
             </div>
@@ -218,7 +223,7 @@
             <div class="container-fluid">
                 
                 <div class="row">
-                    <div class="col-md-2 offset-1">
+                    <div class="col-md-2 offset-md-1">
                         <div class="logo">
                             <img class="img-fluid orange-logo" src="images/logored.png">
                         </div>
@@ -281,7 +286,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-2 offset-3 developers">
+                    <div class="col-md-2 offset-md-3 developers">
                         <h5>Developers</h5> 
                         <ul>
                             <li><a href="#">API docs</a></li>
@@ -308,7 +313,7 @@
                 </div>
                 
                 <div class="row">
-                    <div class="col-md-3 offset-1 copyright">
+                    <div class="col-md-3 offset-md-1 copyright">
                         <p>&copy;2018 All Rights Reserved. Cloud.ca</p> 
                         <a href="#">Privacy and Terms</a>
                     </div>
