close button on sidebar

--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
             
             <ul class="navbar-side" id="navbarSide">
                 <li class="navbar-side-item-list">
-                    <div class="row" id="navbar-side-items"> <!-- menu items row -->
-                        <div class="col-sm-12 why-cloudca">
+                    <div class="row" id="navbar-side-items"><!-- menu items row -->
+                        <a class="close-side-button"><i class="fas fa-times"></i></a>
+                        <div class="col-sm-12 close-button why-cloudca">
                             <h5>Why cloud.ca</h5>
                             <ul>
                                 <li><a href="#">Hyperscale comparison</a></li>
