added proxima nova font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Proxima Nova Font CSS -->
+        <link rel="stylesheet" href="fonts/proxima_nova/font.css">
         
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap-grid.min.css">
