tablet version completed

--- a/hugo/public/index.html
+++ b/hugo/public/index.html
@@ -269,88 +269,87 @@
             </div>
         </div>
         <div class="row complex-clouds">
-            <div class="col-md-4 offset-md-2 col-sm-8">
+            <div class="col-lg-4 offset-lg-2 col-sm-8">
                 <h2>Clouds are complex...</h2>
             </div>
-            <div class="col-lg-4 offset-1 col-sm-4 img-triangle">
+            <div class="col-lg-4 offset-lg-1 col-sm-4 img-triangle">
                 <img src="images/triangle-blue-card.png">
             </div>
         </div>
     </div>
 </div>
 
-        <div class="second-card card-section">
-    <div id="title-row-secondcard">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-5 offset-md-2 col-sm-12">
-                    <h2>but they don't have to be</h2>
-                </div>
+        <div class="second-card card-section fixed">
+    <div class="container-fluid">
+
+        <div class="row title-row-secondcard">
+            <div class="col-lg-4 offset-lg-2 col-sm-8 but-they-dont-have-to-be">
+                <h2>but they don't have to be</h2>
             </div>
-        </div>
-        <div class="row ">
-            <div class="col-md-2 offset-md-7 col-sm-6">
+            <div class="col-lg-4 offset-lg-1 col-sm-4">
                 <img class="img-cube-desktop" src="images/cube.png">
                 <img class="img-cube-mobile" src="images/cube-gradient.png">
             </div>
         </div>
-    </div>
 
-    <div class="row text-row-secondcard">
-        <div class="col-md-4 offset-md-1 col-sm-12">
-            <h4>Our Infrastructure as a Service (laaS) is purpose built for:</h4>
-            <ul>
-                <li class="important-item">- Data Sovereignty</li>
-                <li>- Performance &amp; Security</li>
-                <li>- Simplified Self-service</li>
-                <li>- Cloud automation</li>
-            </ul>
-        </div>
+        <div class="row text-row-secondcard">
+            <div class="col-md-4 offset-md-1 col-sm-12">
+                <h4>Our Infrastructure as a Service (laaS) is purpose built for:</h4>
+                <ul>
+                    <li class="important-item">- Data Sovereignty</li>
+                    <li>- Performance &amp; Security</li>
+                    <li>- Simplified Self-service</li>
+                    <li>- Cloud automation</li>
+                </ul>
+            </div>
 
-        <div class="col-md-4 offset-md-1 col-sm-12">
-            <h4>Cloud.ca is not a hyperscale cloud, here is how we are different:</h4>
-            <p>A Canadian-owned provider with a vested interest in your data security. Consume cloud your way: flexible offerings and pricing structures. Easy access to a team that supports your business success and unique needs.</p>
-            <div class="learn-more-second-card">
-                <a href="#">Learn more</a>
+            <div class="col-md-4 offset-md-1 col-sm-12">
+                <h4>Cloud.ca is not a hyperscale cloud, here is how we are different:</h4>
+                <p>A Canadian-owned provider with a vested interest in your data security. Consume cloud your way: flexible offerings and pricing structures. Easy access to a team that supports your business success and unique needs.</p>
+                <div class="learn-more-second-card">
+                    <a href="#">Learn more</a>
+                </div>
             </div>
         </div>
+
     </div>
 </div>
 
         <div class="features-card card-section">
     <div class="container-fluid">
-        <div class="row">
+
+        <div class="row technical-brief">
             <div class="col-sm-12 card-title">
                 <h4>Technical Brief</h4>
-            </div>
-        </div>
-        <div class="tech-brief">
-            <div class="row">
-                <div class="col-md-2 offset-md-2 col-sm-12">
-                    <img src="images/elastic-compute.png">
-                    <p>Elastic compute</p>
+
+                <div class="row">
+                    <div class="col-md-2 offset-md-2 col-sm-12">
+                        <img src="images/elastic-compute.png">
+                        <p>Elastic compute</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <img class="img-fluid" src="images/performant-multi-tenant-storage.png">
+                        <p>Performant multi-tenant storage</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <img class="img-fluid" src="images/multi-tiered-networking.png">
+                        <p>Multi-tiered networking</p>
+                    </div>
                 </div>
-                <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/performant-multi-tenant-storage.png">
-                    <p>Performant multi-tenant storage</p>
-                </div>
-                <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/multi-tiered-networking.png">
-                    <p>Multi-tiered networking</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-2 offset-md-2 col-sm-12">
-                    <img class="img-fluid" src="images/integrated-devops-tooling.png">
-                    <p>Integrated DevOps Tooling</p>
-                </div>
-                <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/dedicated-infrastructure.png">
-                    <p>Dedicated infrastructure</p>
-                </div>
-                <div class="col-md-2 offset-md-1 col-sm-12">
-                    <img class="img-fluid" src="images/bare-metal-servers.png">
-                    <p>Bare-metal servers</p>
+
+                <div class="row">
+                    <div class="col-md-2 offset-md-2 col-sm-12">
+                        <img class="img-fluid" src="images/integrated-devops-tooling.png">
+                        <p>Integrated DevOps Tooling</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <img class="img-fluid" src="images/dedicated-infrastructure.png">
+                        <p>Dedicated infrastructure</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <img class="img-fluid" src="images/bare-metal-servers.png">
+                        <p>Bare-metal servers</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -358,35 +357,38 @@
         <div class="row text-row-features-card">
             <div class="col-sm-12 card-title">
                 <h4>Workloads running on cloud.ca</h4>
+
+                <div class="row workloads">
+                    <div class="col-md-2 offset-md-2 col-sm-12">
+                        <p>Dev/Test environments</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <p>Virtual desktops</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <p>Legacy applications</p>
+                    </div>
+                </div>
+
+                <div class="row workloads">
+                    <div class="col-md-2 offset-md-2 col-sm-12">
+                        <p>SaaS platforms</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <p>Web applications</p>
+                    </div>
+                    <div class="col-md-2 offset-md-1 col-sm-12">
+                        <p>Infrastructure reseller</p>
+                    </div>
+                </div>
+
             </div>
         </div>
-        <div class="row workloads-row">
-             <div class="col-md-2 offset-md-2 col-sm-12">
-                <p>Dev/Test environments</p>
-            </div>
-            <div class="col-md-2 offset-md-1 col-sm-12">
-                <p>Virtual desktops</p>
-            </div>
-            <div class="col-md-2 offset-md-1 col-sm-12">
-                <p>Legacy applications</p>
-            </div>
-        </div>
-        <div class="row workloads-row">
-            <div class="col-md-2 offset-md-2 col-sm-12">
-                <p>SaaS platforms</p>
-            </div>
-            <div class="col-md-2 offset-md-1 col-sm-12">
-                <p>Web applications</p>
-            </div>
-            <div class="col-md-2 offset-md-1 col-sm-12">
-                <p>Infrastructure reseller</p>
-            </div>
-        </div>
+
     </div>
 </div>
 
-        <div class="second-card call-to-action-card card-section">
-    
+        <div class="call-to-action-card card-section">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 col-sm-12 cta-block">
